--- a/docs/whiteboard/outline.org
+++ b/docs/whiteboard/outline.org
@@ -50,3 +50,33 @@
 *** city
 *** state
 *** country
+* Calls
+** add_book
+** get_all_books
+** find_book
+*** name
+*** author
+*** published_year
+*** isbn13
+*** publisher
+*** genre
+*** category
+** get_book_authors
+** get_all_authors
+** add_author
+** add_author_to_book
+*** book_name
+*** book_id
+*** isbn13
+** add_library
+** find_libraries
+*** name
+*** city
+*** state
+*** country
+** get_all_library_books
+*** name
+*** id
+** locate_book
+*** name
+*** isbn13
